# ResearchTrend

./: .gitignore  CLAUDE.md  README.md  analyze_agent_om_related.py  analyze_detailed_comparison.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: paper-qa.md
.claude/skills/collect-papers/: SKILL.md
.claude/skills/download-pdfs/: SKILL.md
.claude/skills/generate-report/: SKILL.md
.claude/skills/summarize-paper/: SKILL.md
data/: papers.db
data/summaries/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+440 more)
docs/reports/: Agent-OM_detailed_analysis.md  Agent-OM_related_papers_comparison.md  agent_om_analysis_summary_kr.md  agent_om_comparative_analysis.md
src/: __init__.py
src/collectors/: __init__.py  vldb_collector.py
src/storage/: __init__.py  database.py  models.py
src/utils/: config.py  pdf_handler.py
